...
        setUpCollectionView()
        // Do any additional setup after loading the view.
    }

    func setUpSearchBar() -> Void {
        searchBar = UISearchBar()
        searchBar.accessibilityIdentifier = "searchTextBar"
        self.view.addSubview(searchBar)
        searchBar.backgroundColor = UIColor.white
        searchBar.tintColor = UIColor.white
        searchBar.snp.makeConstraints { (make) in
            make.topMargin.equalToSuperview().offset(10)
            make.left.right.equalTo(self.view)
...

extension CollectViewController {
    private func setupNavigationBar() {
        navigationController?.navigationBar.barTintColor = UIColor.white
        navigationController?.navigationBar.titleTextAttributes = [NSAttributedString.Key.foregroundColor : UIColor.white]
        let titleLabel = UILabel(frame: CGRect(x: 0, y: 0, width: 40, height: 40))
        titleLabel.text = "CollectViewList"
        titleLabel.textColor = UIColor.black
        navigationItem.titleView = titleLabel
    }
}

