...
        view.addSubview(titleLabel)

        let username = WYTextField(frame: CGRect(x: 0, y: 0, width: 270, height: 30))
        username.center = CGPoint(x: view.center.x, y: 350)
        username.placeholder = "邮箱"
        username.tag = 0
        username.accessibilityIdentifier = "Email"
        view.addSubview(username)
        self.usernameTextField = username
        
        let password = WYTextField(frame: CGRect(x: 0, y: 0, width: 270, height: 30))
        password.center = CGPoint(x: view.center.x, y: username.center.y + 60)
        password.placeholder = "密码"
        password.tag = 1
        password.accessibilityIdentifier = "Password"
        view.addSubview(password)
        self.passwordTextField = password

        let login = WYButton(frame: CGRect(x: 0, y: 0, width: 200, height: 44))
        login.center = CGPoint(x: view.center.x, y: password.center.y + 100)
        view.addSubview(login)
...
