...

extension TableViewController {
    private func setupNavigationBar() {
        navigationController?.navigationBar.barTintColor = UIColor.white
        navigationController?.navigationBar.titleTextAttributes = [NSAttributedString.Key.foregroundColor : UIColor.white]
        let titleLabel = UILabel(frame: CGRect(x: 0, y: 0, width: 40, height: 40))
        titleLabel.text = "TableViewList"
        titleLabel.textColor = UIColor.black
        navigationItem.titleView = titleLabel
    }
}

extension TableViewController : UITableViewDelegate {
...
