...
        maskLayer!.fillColor = UIColor.white.cgColor
        maskLayer!.path = drawBezierPath(frame.size.width / 2)?.cgPath
        layer.addSublayer(maskLayer!)
        
        button = UIButton(type: .custom)
        button!.frame = bounds
        button!.setTitle("SIGN IN", for: .normal)
        button!.setTitleColor(UIColor.white, for: .normal)
        button?.titleLabel?.font = UIFont.systemFont(ofSize: 13.0)
        addSubview(button!)
        button!.addTarget(self, action: #selector(clickBtn), for: .touchUpInside)
    }

...
